--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="6">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/murad.png" alt="মুরাদ হোসেন" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="মুরাদ হোসেন" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মুরাদ হোসেন</h3>
@@ -545,7 +545,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="12">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/maruf-talha.png" alt="সুলতান মারুফ তালহা" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="সুলতান মারুফ তালহা" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> সুলতান মারুফ তালহা </h3>
@@ -768,7 +768,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="25">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/ali-ammar-muaz.png" alt="আলী আম্মার মুয়াজ" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="আলী আম্মার মুয়াজ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> আলী আম্মার মুয়াজ </h3>
@@ -904,7 +904,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="33">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/muaz-bin-mahmud.png" alt="মুয়াজ বিন মাহমুদ" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="মুয়াজ বিন মাহমুদ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মুয়াজ বিন মাহমুদ </h3>
@@ -970,7 +970,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="37">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/mir-sibgatullah-toki.png" alt="মীর ছিবগাতুল্লাহ তকি" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="মীর ছিবগাতুল্লাহ তকি" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মীর ছিবগাতুল্লাহ তকি </h3>
@@ -1036,7 +1036,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="41">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/mosarraf-hossain.png" alt="মোঃ মোশারফ হোসাইন" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="মোঃ মোশারফ হোসাইন" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মোঃ মোশারফ হোসাইন </h3>
@@ -1121,7 +1121,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="46">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/tamzid.png" alt="তামজীদুল ইসলাম" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="তামজীদুল ইসলাম" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> তামজীদুল ইসলাম </h3>
@@ -1138,7 +1138,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="47">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/arafat-rabbi.png" alt="আরাফাত ই রাব্বি প্রিন্স" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="আরাফাত ই রাব্বি প্রিন্স" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> আরাফাত ই রাব্বি প্রিন্স </h3>
@@ -1241,7 +1241,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="53">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/tanvir-ajom.png" alt="তানভীর আজম" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="তানভীর আজম" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> তানভীর আজম </h3>
@@ -1326,7 +1326,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="58">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/tanvir-ahmed.png" alt="মো: তানভীর আহমেদ" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="মো: তানভীর আহমেদ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মো: তানভীর আহমেদ </h3>
@@ -1408,10 +1408,10 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 mb-20 mt-50" data-number="63">
+                    <div class="col-md-3 mb-20 mt-50 d-none" data-number="63">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/imran-sujon.png" alt="আল ইমরান সুজন" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="আল ইমরান সুজন" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> আল ইমরান সুজন </h3>
@@ -1581,7 +1581,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="73">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/misbahur-rahman.png" alt="মিসবাউর রহমান (আসিম)" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="মিসবাউর রহমান (আসিম)" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মিসবাউর রহমান (আসিম) </h3>
@@ -1649,7 +1649,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="77">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/mohammad-riyad.png" alt="মোহাম্মদ ইমাম উদ্দিন রিয়াদ" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="মোহাম্মদ ইমাম উদ্দিন রিয়াদ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মোহাম্মদ ইমাম উদ্দিন রিয়াদ </h3>
