--- a/index.html
+++ b/index.html
@@ -991,6 +991,7 @@
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> এডভোকেট মো. দ্বীন ইসলাম </h3>
+                                <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
@@ -1007,6 +1008,7 @@
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> সানাউল্লাহ পাটোয়ারী </h3>
+                                <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
