--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
                                 বাংলাদেশের সংখ্যাগরিষ্ঠ মানুষের গৌরবান্বিত ইতিহাস, ঐতিহ্য, সংস্কৃতি ও ধর্মবিশ্বাস ও মূল্যবোধের ওপর ভিত্তি করে একটি টেকসই গণতান্ত্রিক রাষ্ট্র গঠনে উদ্যমী হওয়া। 
                             </li>
                             <li>
-                                সকল ধর্মের মানুষের আচার-অনুষ্ঠানকে সম্মান প্রদর্শন, নিজস্ব ধর্মীয় বিশ্বাস ও মূল্যবোধকে সমুন্নত রেখে সাম্প্রদায়িক সম্প্রীতি ফিরিয়ে আনা। মুসলমান, হিন্দু বা অন্য কোনো ধর্মের অনুসারীদের মাঝে; কিংবা পাহাড়ি ও সমতলের মানুষের মধ্যে সকল ধরনের বৈষম্য দূর করা। 
+                                সকল ধর্মের মানুষের আচার-অনুষ্ঠানকে সম্মান প্রদর্শন, নিজস্ব ধর্মীয় বিশ্বাস ও মূল্যবোধকে সমুন্নত রেখে সাম্প্রদায়িক সম্প্রীতি ফিরিয়ে আনা। সকল ধর্মের অনুসারীদের মাঝে; কিংবা পাহাড়ি ও সমতলের মানুষের মধ্যে সকল ধরনের বৈষম্য দূর করা। 
                             </li>
                             <li>
-                                বাংলাদেশের নারী ও কিশোরীদের সামাজিক, রাষ্ট্রীয় নিরাপত্তা প্রদান করা, শালীন সৌহার্দ্যমূলক পরিবেশ তৈরি করা এবং রাজনীতি, অর্থনীতিসহ সকল সেক্টরের নারীদের ন্যায্য অধিকার নিশ্চিত করা। সকল ধর্ষণ মামলার দ্রুত বিচার, ধর্ষকের সর্বোচ্চ বিচার নিশ্চিতকরণ করতে জনগনকে সাথে নিয়ে কাজ করে যাওয়া। 
+                                বাংলাদেশের নারীদের সামাজিক, রাষ্ট্রীয় নিরাপত্তা প্রদান করা, শালীন সৌহার্দ্যমূলক পরিবেশ তৈরি করা এবং রাজনীতি, অর্থনীতিসহ সকল সেক্টরের নারীদের ন্যায্য অধিকার নিশ্চিত করা। সকল ধর্ষণ মামলার দ্রুত বিচার, ধর্ষকের সর্বোচ্চ বিচার নিশ্চিত করতে জনগনকে সাথে নিয়ে কাজ করে যাওয়া। 
                             </li>
                             <li>
                                 দেশের সকল সুবিধাবঞ্চিত জনগোষ্ঠী, ক্ষুদ্র নৃগোষ্ঠী, পাহাড়ি, জেলে সম্প্রদায়ের আর্থ-সামাজিক মুক্তি নিশ্চিত করতে প্রাইভেট সেক্টরের সাথে সমন্বয় করে টেকসই অর্থনৈতিক আজাদি নিশ্চিত করতে অব্যাহতভাবে কাজ করে যাওয়া৷
