--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="34">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/farhana-suchi.png" alt="ফারহানা শারমিন শুচি" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="ফারহানা শারমিন শুচি" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> ফারহানা শারমিন শুচি </h3>
