--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!-- CSS Dependencies -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="plugins.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="plugins.css?v=2.6.25">
+    <link rel="stylesheet" href="style.css?v=2.6.25">
     <!-- Modernizr -->
     <script src="modernizr-2.8.3.min.js"></script>
     <!-- Google Analytics -->
