--- a/index.html
+++ b/index.html
@@ -127,6 +127,20 @@
             </div>
         </section>
 
+        <section id="important-area" class="important-news-area section pb-40 pt-120" aria-labelledby="about-title">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-6">
+                         <button type="button" class="btn btn-primary btn-xlg btn-block" style="width:100%;"> <a href="/financial-statement.pdf">Financial Statement</a></button>
+                    </div>
+                    <div class="col-md-6">
+                         <button type="button" class="btn btn-primary btn-xlg btn-block" style="width:100%;"> <a href="/finance-policy.pdf"> Financial Policy </a></button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         
 
         <!-- About Area -->
