--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-6">
-                         <button type="button" class="btn btn-primary btn-xlg btn-block" style="width:100%;"> <a href="/financial-statement.pdf">Financial Statement</a></button>
+                         <button type="button" class="btn btn-primary btn-xlg btn-block" style="width:100%;"> <a href="/financial-statement.pdf" target="_blank">Financial Statement</a></button>
                     </div>
                     <div class="col-md-6">
-                         <button type="button" class="btn btn-primary btn-xlg btn-block" style="width:100%;"> <a href="/finance-policy.pdf"> Financial Policy </a></button>
+                         <button type="button" class="btn btn-primary btn-xlg btn-block" style="width:100%;"> <a href="/finance-policy.pdf" target="_blank"> Financial Policy </a></button>
                     </div>
                 </div>
             </div>
