--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
         <section id="important-area" class="important-news-area section pb-40 pt-120" aria-labelledby="about-title">
             <div class="container">
                 <div class="row text-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6 mb-40">
                         <a href="/financial-statement.pdf" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" > Financial Statement </button></a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 mb-40">
                         <a href="/finance-policy-draft-1.pdf" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" >  Financial Policy </button></a>
                     </div>
                 </div>
