--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <a href="/financial-statement.pdf" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" > Financial Statement </button></a>
                     </div>
                     <div class="col-md-6 mb-40">
-                        <a href="/finance-policy-draft-1.pdf" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" >  Financial Policy Draft 1 </button></a>
+                        <a href="/finance-policy-draft-1.pdf" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" >  Financial Policy 1st Draft </button></a>
                     </div>
                 </div>
             </div>
