--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-6 mb-40">
-                        <a href="/financial-statement.pdf" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" > Financial Statement </button></a>
+                        <a href="/financial-report.html" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" > Financial Statement </button></a>
                     </div>
                     <div class="col-md-6 mb-40">
-                        <a href="/finance-policy-draft-1.pdf" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" >  Financial Policy 1st Draft </button></a>
+                        <a href="/financial-policy.html" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" >  Financial Policy 1st Draft </button></a>
                     </div>
                 </div>
             </div>
