--- a/financial-report.html
+++ b/financial-report.html
@@ -71,6 +71,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12 mx-auto text-center">
+                        <h2 class="section-title h2 pb-40 pt-40" id="special-title">Financial Report</h2>
                         <iframe src="financial-statement.pdf" frameborder="0" style="width: 100%; height: 100vh;"></iframe>
                     </div>
                 </div>
@@ -140,7 +141,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="plugins.js"></script>
-    <script src="ajax-mail.js"></script>
     <script src="main.js"></script>
     <script>
         $(".more-detils").click(function(){
