--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <!--Section Title Start-->
                 <div class="row">
                     <div class="section-title text-center col-12 mb-60">
-                        <img src="logo.png" alt="UP Bangladesh Logo" style="height: auto; margin-bottom: 20px;max-width:90%;">
+                        <img src="member-logo.jpg" alt="UP Bangladesh Logo" style="height: auto; margin-bottom: 20px;max-width:90%;">
                     </div>
                 </div>
                 <!--Section Title End-->
