--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
                                     <li><a href="/media.html">Media</a></li>
                                     <li><a href="#about-area">About</a></li>
                                     <li><a href="#footer-area">Contact Us</a></li>
+                                    <li><a href="https://donate.upbangladesh.org">Donate</a></li>
                                 </ul>
                             </nav>
                         </div>
                     </div>
                 </div>
             </div>
+
         </header>
 
         <!-- Hero Area -->
