--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="col-auto">
                             <!-- Logo -->
                             <div class="navbar-header d-flex justify-content-between">
-                                <a href="/" class="logo navbar-brand"><img src="logo.png?v=2.6.25" alt="UP Bangladesh Logo"></a>
+                                <a href="/" class="logo navbar-brand"><img style="max-width:140px" src="logo.png?v=2.6.25" alt="UP Bangladesh Logo"></a>
                                 <button class="navbar-toggle collapsed d-block d-md-none" data-bs-toggle="collapse" data-bs-target="#main-menu" aria-label="Toggle navigation">
                                     <i class="zmdi zmdi-menu menu-open"></i>
                                     <i class="zmdi zmdi-close menu-close"></i>
