ahmed karim image

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                             </div>
                         </div>
                         <div class="col-auto d-flex flex-md-row flex-lg-row-reverse">
+                            <div class="header-search floatright">
+                                <div class="header-button floatright">
+                                    <a href="donate.html">Donate Now</a>
+                                </div>
+                            </div>
                             <!-- Main Menu -->
                             <nav class="main-menu collapse" id="main-menu">
                                 <ul>
@@ -102,6 +107,7 @@
                                     <li><a href="https://donate.upbangladesh.org">Donate</a></li>
                                 </ul>
                             </nav>
+                            
                         </div>
                     </div>
                 </div>
@@ -663,7 +669,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="18">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="আহমদ করিম চৌধুরী" class="img-fluid card-img-top" />
+                                <img src="members/karim.png" alt="আহমদ করিম চৌধুরী" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> আহমদ করিম চৌধুরী </h3>
