aziz bhai image

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="19">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="আব্দুল আজিজ ভূঁইয়া" class="img-fluid card-img-top" />
+                                <img src="members/aziz.png" alt="আব্দুল আজিজ ভূঁইয়া" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> আব্দুল আজিজ ভূঁইয়া </h3>
