aziz bhai socials

--- a/index.html
+++ b/index.html
@@ -688,9 +688,9 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/IamAzizAbdullah" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://x.com/IamAbdulAzizbd" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
+                                <a class="me-3" href="https://www.instagram.com/iamazizabdullah/" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
                         </div>
                     </div>
