--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                                     <li><a href="/events">Events</a></li>
                                     <li><a href="/media.html">Media</a></li>
                                     <li><a href="#about-area">About</a></li>
+                                    <li><a href="https://www.jkcombatacademy.com/seminars/run">July Run</a></li>
                                     <li><a href="#footer-area">Contact Us</a></li>
                                     <li><a href="https://donate.upbangladesh.org">Donate</a></li>
                                 </ul>
@@ -133,6 +134,9 @@
         <section id="important-area" class="important-news-area section pb-40 pt-120" aria-labelledby="about-title">
             <div class="container">
                 <div class="row text-center">
+                    <div class="col-md-12">
+                        <a href="https://www.jkcombatacademy.com/seminars/run" target="_blank" style="width: 100%;"> <img src="img/july-run.jpg" alt="Run for July"> </a>
+                    </div>
                     <div class="col-md-6 mb-40">
                         <a href="/financial-report.html" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" > Financial Statement </button></a>
                     </div>
