july run update heading

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
         <section id="important-area" class="important-news-area section pb-40 pt-120" aria-labelledby="about-title">
             <div class="container">
                 <div class="row text-center">
-                    <div class="col-md-12">
+                    <div class="col-md-12 mb-20">
+                        <h2 style="color:#90161f;font-size:xx-large;"> <a href="https://www.jkcombatacademy.com/seminars/run" target="_blank">Click here to Join Run For Freedom </a></h2>
                         <a href="https://www.jkcombatacademy.com/seminars/run" target="_blank" style="width: 100%;"> <img src="img/july-run.jpg" alt="Run for July"> </a>
                     </div>
                     <div class="col-md-6 mb-40">
