--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
             </div>
         </section>
 
-        <section id="important-area" class="important-news-area section pb-40 pt-120" aria-labelledby="about-title">
+        <section id="important-area" class="important-news-area section pb-40 pt-40" aria-labelledby="about-title">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-12 mb-20">
-                        <h2 style="color:#90161f;font-size:xx-large;"> <a href="https://www.jkcombatacademy.com/seminars/run" target="_blank">Click here to Join Run For Freedom </a></h2>
-                        <a href="https://www.jkcombatacademy.com/seminars/run" target="_blank" style="width: 100%;"> <img style="max-width:100%;" src="img/july-run.jpg" alt="Run for July"> </a>
+                        <h2 style="color:#90161f;font-size:xx-large;"> <a href="https://www.jkcombatacademy.com/seminars/run" target="_blank">Click here for July Run Registration </a></h2>
+                        <a href="https://www.jkcombatacademy.com/seminars/run" target="_blank" style="width: 100%;"> <img style="max-width:100%;" src="img/red-july-run.jpg" alt="Run for July"> </a>
                     </div>
                     <div class="col-md-6 mb-40">
                         <a href="/financial-report.html" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" > Financial Statement </button></a>
