july run feature

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="United People's Bangladesh - UP Bangladesh">
     <meta name="twitter:description" content="Join UP Bangladesh to build an equitable and prosperous nation through political transformation and social justice.">
-    <meta name="twitter:image" content="https://upbangladesh.org/feature.jpg">
+    <meta name="twitter:image" content="https://upbangladesh.org/red-july-run.jpg">
     <!-- Canonical URL -->
     <link rel="canonical" href="https://upbangladesh.org/">
     <!-- Favicon -->
