--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="United People's Bangladesh - UP Bangladesh">
     <meta property="og:description" content="বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন ও সামাজিক চুক্তির পুনর্বহাল- এর মাধ্যমে বৈষম্যহীন ও সমৃদ্ধ বাংলাদেশের লক্ষ্যে জুলাই গণঅভ্যুত্থানের শক্তি তরুণদের সাহসিকতা ও প্রবীণদের অভিজ্ঞতার সমন্বয়ে আমাদের যাত্রা...">
-    <meta property="og:image" content="https://upbangladesh.org/feature.jpg">
+    <meta property="og:image" content="https://upbangladesh.org/red-july-run.jpg">
     <meta property="og:url" content="https://upbangladesh.org/">
     <meta property="og:type" content="website">
     <meta property="fb:app_id" content="1849982302524358">
