--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <li><a href="/events">Events</a></li>
                                     <li><a href="/media.html">Media</a></li>
                                     <li><a href="#about-area">About</a></li>
-                                    <li><a href="https://www.jkcombatacademy.com/seminars/run">July Run</a></li>
+                                    <li><a href="https://july.upbangladesh.org">July Run</a></li>
                                     <li><a href="#footer-area">Contact Us</a></li>
                                     <li><a href="https://donate.upbangladesh.org">Donate</a></li>
                                 </ul>
@@ -135,8 +135,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-12 mb-20">
-                        <h2 style="color:#90161f;font-size:xx-large;"> <a href="https://www.jkcombatacademy.com/seminars/run" target="_blank">Click here for July Run Registration </a></h2>
-                        <a href="https://www.jkcombatacademy.com/seminars/run" target="_blank" style="width: 100%;"> <img style="max-width:100%;" src="img/red-july-run.jpg" alt="Run for July"> </a>
+                        <h2 style="color:#90161f;font-size:xx-large;"> <a href="https://july.upbangladesh.org" target="_blank">Click here for July Run Registration </a></h2>
+                        <a href="https://july.upbangladesh.org" target="_blank" style="width: 100%;"> <img style="max-width:100%;" src="img/red-july-run.jpg" alt="Run for July"> </a>
                     </div>
                     <div class="col-md-6 mb-40">
                         <a href="/financial-report.html" target="_blank" style="width: 100%;"> <button style="width: 100%;" type="button" class="btn btn-primary btn-xlg btn-block" > Financial Statement </button></a>
